    * Add snctdialer_list_log_archive handling:
      - Update www/vicidial/admin_modify_lead.php,
          www/vicidial/admin_header.php,
          www/vicidial/non_agent_api.php
    * Fix display format for UTF-8, Fix csv export:
      - Update www/vicidial/AST_dialer_inventory_report.php.
    * Add Base-Campaign to lists:
      - Update www/vicidial/admin.php,
        

3.0.6
  [Jörg Frings-Fürst]
  * Fix for  CVE-2021-3603 /-34551:
    - Update phpmailer to release 6.5.0.
  * Update firebase/php-jwt to release 5.3.0.

3.0.5
  [Jörg Frings-Fürst]
    * Fix CVE-2020-7746:
      - Update www/vicidial/chart/Chart.js to release 2.9.4.

3.0.4
  [Jörg Frings-Fürst]
    * Fix GDPR download:
      - Update: www/vicidial/admin_modify_lead.php.

3.0.3
  [Jörg Frings-Fürst]
    * Add footer text after callback calendar:
      - Update: www/agc/vicidial.php.
      - New: www/agc/callback_footer.php.sample.
    * Change length of Campaign ID to 20:
      - Update: www/vicidial/admin.php,
          extras/mysql_create_table_since_3.0.1.sql.
      - New: update_db_since_3.0.1.sql.
    *  Remove preselect Modify [vicidial|agent] log, Change default date
        on CBHOLD to today and preselect Useronly:
       - Update: www/vicidial/admin_modify_lead.php.
    *  Fix bug in GenDispoScreen:
      - Update www/agc/vdc_db_query_ng.php,
          bin/cpp/src/GenRealTimeData.cpp.
    *  Add Bcc from group_email to Ticketmail:
      - Update: www/agc/SendMail.php,
          www/agc/functions.php,
          www/agc/vicidial.php.
    * Remove reading vm conffile at startup: 
      - Update: bin/ADMIN_keepalive_ALL.pl.
    * First work on remove short Recordings:
      - New bin/AST_CRON_purge_short_recordings.pl.

3.0.2
  [Jörg Frings-Fürst]
    * Replace alt_phone_search with a checkbox:
      - Update: www/vicidial/admin_search_lead.php.

3.0.1
  [Danny Funkat]
    * Add Pause code into AGENTSview:
      - Update www/agc/vdc_db_query.php.
  [Jörg Frings-Fürst]